[IK-25] refactor: 댓글 컨트롤러명 변경, Service 리팩토링